--- a/static/css/products/products.css
+++ b/static/css/products/products.css
@@ -30,7 +30,7 @@
 }
 
 .product {
-  flex-basis: 48%;
+  flex-basis: 47%;
 }
 
 .image-container {
